--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -36,9 +36,21 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
                     android:paddingTop="4dp">
+
+                    <TextView
+                        android:id="@+id/tvProfile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Perfil"
+                        android:drawableLeft="@drawable/baseline_person_24"
+                        android:textSize="18sp"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:layout_gravity="center_vertical"/>
 
                     <TextView
                         android:id="@+id/tvSignOut"
@@ -50,6 +62,7 @@
                         android:paddingTop="4dp"
                         android:paddingBottom="4dp"
                         android:layout_gravity="center_vertical"/>
+
                 </LinearLayout>
 
 
